Update hero section styles for desktops

--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
     </header>
     <main>
       <section
-        class="flex flex-col items-center justify-center bg-blue-100 px-16 pb-[8rem] pt-20 lg:px-[9.5rem] lg:pt-[7.8rem] xl:px-96 2xl:px-[19.7rem] 2xl:pb-[7.3rem] 2xl:pt-[7.75rem]"
+        class="flex flex-col items-center justify-center bg-blue-100 px-16 pb-[8rem] pt-20 lg:px-[9.5rem] lg:pt-[7.8rem] xl:px-96 xl:py-44 2xl:px-[19.7rem] 2xl:pb-[7.3rem] 2xl:pt-[7.75rem]"
       >
         <h1
           class="text-4xl font-medium leading-10 md:text-4xl xl:text-6xl 2xl:text-[4.8rem] 2xl:tracking-[-.15rem]"
@@ -159,10 +159,10 @@
         </h1>
         <form class="flex w-full items-center justify-center" action="submit">
           <div
-            class="relative mt-[3.3rem] flex w-full max-w-96 flex-row items-center rounded-md border-[1px] border-solid border-black-200 px-4 py-1 text-[1.29rem] shadow-[0px_7px_20px_2px_#b9c3cc] 2xl:py-[1.1rem] 2xl:text-xl"
+            class="relative mt-[3.3rem] flex w-full max-w-[27rem] flex-row items-center rounded-lg border-[1px] border-solid border-black-200 px-4 py-1 text-[1.29rem] shadow-[0px_7px_20px_2px_#b9c3cc] xl:mr-5 xl:mt-20 xl:h-14 xl:px-5 2xl:py-[1.1rem] 2xl:text-xl"
           >
             <input
-              class="w-[15.5rem] bg-blue-100 outline-none md:w-[21rem]"
+              class="w-[15.5rem] bg-blue-100 outline-none md:w-[21rem] xl:w-full"
               type="search"
               placeholder="Search"
               name="search"
@@ -170,12 +170,12 @@
             />
             <button
               type="submit"
-              class="flex size-8 items-center justify-center"
+              class="flex size-8 items-center justify-center xl:size-9"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="10 0 25 25"
-                class="size-7"
+                class="size-7 xl:h-11 xl:w-12"
               >
                 <path
                   fill="none"
