--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
     </header>
     <main>
       <section
-        class="flex flex-col items-center justify-center bg-blue-100 px-16 pb-[8rem] pt-20 lg:px-[9.5rem] lg:pt-[7.8rem] xl:px-96 xl:py-44 2xl:px-[19.7rem] 2xl:pb-[7.3rem] 2xl:pt-[7.75rem]"
+        class="flex flex-col items-center justify-center bg-blue-100 px-16 pb-[8rem] pt-20 lg:px-[9.5rem] lg:pt-[7.8rem] xl:px-80 xl:py-44 2xl:px-[19.7rem] 2xl:pb-[7.3rem] 2xl:pt-[7.75rem]"
       >
         <h1
           class="text-4xl font-medium leading-10 md:text-4xl xl:text-6xl 2xl:text-[4.8rem] 2xl:tracking-[-.15rem]"
@@ -159,10 +159,10 @@
         </h1>
         <form class="flex w-full items-center justify-center" action="submit">
           <div
-            class="relative mt-[3.3rem] flex w-full max-w-[27rem] flex-row items-center rounded-lg border-[1px] border-solid border-black-200 px-4 py-1 text-[1.29rem] shadow-[0px_7px_20px_2px_#b9c3cc] xl:mr-5 xl:mt-20 xl:h-14 xl:px-5 2xl:py-[1.1rem] 2xl:text-xl"
+            class="relative mt-[3.3rem] flex w-full max-w-[38rem] flex-row items-center rounded-[.3rem] border-[1px] border-solid border-black bg-white px-4 py-1 text-[1.29rem] shadow-[0px_7px_20px_2px_#b9c3cc] xl:mt-11 xl:h-16 xl:px-5 2xl:py-[1.1rem] 2xl:text-xl"
           >
             <input
-              class="w-[15.5rem] bg-blue-100 outline-none md:w-[21rem] xl:w-full"
+              class="w-[15.5rem] bg-white outline-none md:w-[21rem] xl:w-full xl:placeholder:text-xl"
               type="search"
               placeholder="Search"
               name="search"
@@ -191,26 +191,28 @@
         </form>
       </section>
       <section
-        class="px-14 py-20 md:px-16 md:py-28 lg:pb-[7.5rem] 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
+        class="px-14 py-20 md:px-16 md:py-28 lg:pb-[7.5rem] xl:px-20 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
       >
         <div
-          class="flex flex-col gap-20 md:grid md:grid-cols-2 2xl:grid 2xl:grid-cols-2"
+          class="flex flex-col gap-20 md:grid md:grid-cols-2 xl:grid-cols-2 2xl:grid 2xl:grid-cols-2"
         >
           <div class="flex flex-row">
             <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-versions.png" alt="" />
             </div>
-            <div class="flex w-64 flex-col text-black 2xl:w-[25rem]">
+            <div
+              class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-[25rem]"
+            >
               <h2
                 class="pb-[.9rem] text-xl font-semibold tracking-tight 2xl:pb-4 2xl:tracking-normal"
               >
-                Using Abstract
+                Branches
               </h2>
               <p
-                class="text-lg font-light 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+                class="text-lg font-light xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
               >
-                Abstract lets you manage, version, and document your designs in
-                one place.
+                Abstract Branches lets you manage, version, and document your
+                designs in one place.
               </p>
               <div
                 class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
@@ -228,13 +230,17 @@
             <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-account.png" alt="" />
             </div>
-            <div class="flex w-64 flex-col text-black 2xl:w-[24rem]">
+            <div
+              class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-[24rem]"
+            >
               <h2
                 class="pb-[.9rem] text-xl font-semibold tracking-tight 2xl:pb-4"
               >
                 Manage your account
               </h2>
-              <p class="text-lg 2xl:text-[1.4rem] 2xl:tracking-[.04rem]">
+              <p
+                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+              >
                 Configure your account settings, such as your email, profile
                 details, and password.
               </p>
@@ -254,13 +260,17 @@
             <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-organizations.png" alt="" />
             </div>
-            <div class="flex w-64 flex-col text-black 2xl:w-[25rem]">
+            <div
+              class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-[25rem]"
+            >
               <h2
                 class="pb-[.9rem] text-xl font-semibold tracking-tight 2xl:pb-4"
               >
                 Manage organizations, teams, and projects
               </h2>
-              <p class="text-lg 2xl:text-[1.4rem] 2xl:tracking-[.04rem]">
+              <p
+                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+              >
                 Use Abstract organizations, teams, and projects to organize your
                 people and your work.
               </p>
@@ -280,13 +290,17 @@
             <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-billing.png" alt="" />
             </div>
-            <div class="flex w-64 flex-col text-black 2xl:w-[23rem]">
+            <div
+              class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-[23rem]"
+            >
               <h2
                 class="pb-[.9rem] text-xl font-semibold tracking-tight 2xl:pb-4"
               >
                 Manage billing
               </h2>
-              <p class="text-lg 2xl:text-[1.4rem] 2xl:tracking-[.04rem]">
+              <p
+                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+              >
                 Change subscriptions and payment details.
               </p>
               <div
@@ -305,13 +319,15 @@
             <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-authenticate.png" alt="" />
             </div>
-            <div class="flex w-64 flex-col text-black 2xl:w-96">
+            <div class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-96">
               <h2
                 class="pb-[.9rem] text-xl font-semibold tracking-tight 2xl:pb-4"
               >
                 Authenticate to Abstract
               </h2>
-              <p class="text-lg 2xl:text-[1.4rem] 2xl:tracking-[.04rem]">
+              <p
+                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+              >
                 Set up and configure SSO, SCIM, and Just-in-Time provisioning.
               </p>
               <div
@@ -330,13 +346,15 @@
             <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-comment.png" alt="" />
             </div>
-            <div class="flex w-64 flex-col text-black 2xl:w-96">
+            <div class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-96">
               <h2
                 class="pb-[.9rem] text-xl font-semibold tracking-tight 2xl:pb-4"
               >
                 Abstract support
               </h2>
-              <p class="text-lg 2xl:text-[1.4rem] 2xl:tracking-[.04rem]">
+              <p
+                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+              >
                 Get in touch with a human.
               </p>
               <div
