--- a/public/index.html
+++ b/public/index.html
@@ -191,13 +191,13 @@
         </form>
       </section>
       <section
-        class="px-14 py-20 md:px-16 md:py-28 lg:pb-[7.5rem] xl:px-20 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
+        class="px-14 py-20 md:px-16 md:py-28 lg:pb-[7.5rem] xl:px-32 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
       >
         <div
-          class="flex flex-col gap-20 md:grid md:grid-cols-2 xl:grid-cols-2 2xl:grid 2xl:grid-cols-2"
+          class="flex flex-col gap-20 md:grid md:grid-cols-2 xl:gap-x-1 2xl:grid 2xl:grid-cols-2"
         >
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
               <img src="./assets/icon-versions.png" alt="" />
             </div>
             <div
@@ -209,7 +209,7 @@
                 Branches
               </h2>
               <p
-                class="text-lg font-light xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+                class="text-lg font-light text-black xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
               >
                 Abstract Branches lets you manage, version, and document your
                 designs in one place.
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="flex flex-row lg:mt-0 2xl:mt-0">
-            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
               <img src="./assets/icon-account.png" alt="" />
             </div>
             <div
@@ -239,7 +239,7 @@
                 Manage your account
               </h2>
               <p
-                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+                class="text-lg font-light text-black xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
               >
                 Configure your account settings, such as your email, profile
                 details, and password.
@@ -257,7 +257,7 @@
             </div>
           </div>
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
               <img src="./assets/icon-organizations.png" alt="" />
             </div>
             <div
@@ -269,7 +269,7 @@
                 Manage organizations, teams, and projects
               </h2>
               <p
-                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+                class="text-lg font-light text-black xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
               >
                 Use Abstract organizations, teams, and projects to organize your
                 people and your work.
@@ -287,7 +287,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
               <img src="./assets/icon-billing.png" alt="" />
             </div>
             <div
@@ -299,7 +299,7 @@
                 Manage billing
               </h2>
               <p
-                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+                class="text-lg font-light text-black xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
               >
                 Change subscriptions and payment details.
               </p>
@@ -316,7 +316,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
               <img src="./assets/icon-authenticate.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-96">
@@ -326,7 +326,7 @@
                 Authenticate to Abstract
               </h2>
               <p
-                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+                class="text-lg font-light text-black xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
               >
                 Set up and configure SSO, SCIM, and Just-in-Time provisioning.
               </p>
@@ -343,7 +343,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
               <img src="./assets/icon-comment.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-96">
@@ -353,7 +353,7 @@
                 Abstract support
               </h2>
               <p
-                class="text-lg xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
+                class="text-lg font-light text-black xl:text-xl 2xl:text-[1.4rem] 2xl:tracking-[.04rem]"
               >
                 Get in touch with a human.
               </p>
