Fix hero section input styles for tablets

--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
     </header>
     <main>
       <section
-        class="flex flex-col items-center justify-center bg-blue-100 px-16 pb-[8rem] pt-20 lg:px-[9.5rem] lg:pt-[7.8rem] xl:px-80 xl:py-44 2xl:px-[19.7rem] 2xl:pb-[7.3rem] 2xl:pt-[7.75rem]"
+        class="flex flex-col items-center justify-center bg-blue-100 px-16 pb-[8rem] pt-20 md:px-44 lg:px-[9.5rem] lg:pt-[7.8rem] xl:px-80 xl:py-44 2xl:px-[19.7rem] 2xl:pb-[7.3rem] 2xl:pt-[7.75rem]"
       >
         <h1
           class="text-4xl font-medium leading-10 md:text-4xl xl:text-6xl 2xl:text-[4.8rem] 2xl:tracking-[-.15rem]"
@@ -159,10 +159,10 @@
         </h1>
         <form class="flex w-full items-center justify-center" action="submit">
           <div
-            class="relative mt-[3.3rem] flex w-full max-w-[38rem] flex-row items-center rounded-[.3rem] border-[1px] border-solid border-black bg-white px-4 py-1 text-[1.29rem] shadow-[0px_7px_20px_2px_#b9c3cc] xl:mt-11 xl:h-16 xl:px-5 2xl:py-[1.1rem] 2xl:text-xl"
+            class="relative mt-[3.3rem] flex w-full max-w-[38rem] flex-row items-center rounded-[.3rem] border-[1px] border-solid border-black bg-white px-4 py-1 text-[1.29rem] shadow-[0px_7px_20px_2px_#b9c3cc] md:mt-8 md:h-12 xl:mt-11 xl:h-16 xl:px-5 2xl:py-[1.1rem] 2xl:text-xl"
           >
             <input
-              class="w-[15.5rem] bg-white outline-none md:w-[21rem] xl:w-full xl:placeholder:text-xl"
+              class="w-[15.5rem] bg-white outline-none md:w-[23rem] xl:w-full xl:placeholder:text-xl"
               type="search"
               placeholder="Search"
               name="search"
@@ -373,7 +373,7 @@
       </section>
     </main>
     <footer
-      class="grid grid-rows-[auto,auto] bg-black-200 px-10 pb-20 md:px-8 2xl:px-24"
+      class="grid grid-rows-[auto,auto] bg-black-200 px-10 pb-20 md:pl-8 md:pr-3 xl:grid-cols-[auto,auto] 2xl:px-24"
     >
       <div class="mt-6 w-64 md:mt-11 2xl:ml-[20.4rem]">
         <img
@@ -419,6 +419,16 @@
           <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
             >Terms of Use</a
           >
+          <div class="md:mr-10">
+            <p
+              class="mt-1 text-lg font-bold text-white lg:text-base 2xl:text-base"
+            >
+              Contact Us
+            </p>
+            <a class="text-base lg:text-base 2xl:text-sm" href="#"
+              >info@abstract.com</a
+            >
+          </div>
         </div>
         <div class="mt-11 flex flex-col md:mt-7">
           <p class="text-2xl font-semibold text-white md:text-lg">Social</p>
@@ -437,19 +447,7 @@
             >Dribble</a
           >
         </div>
-      </div>
-      <div class="flex flex-row text-gray md:pl-[10.4rem]">
-        <div class="md:mr-60">
-          <p
-            class="mt-1 text-lg font-bold text-white lg:text-base 2xl:text-base"
-          >
-            Contact Us
-          </p>
-          <a class="text-base lg:text-base 2xl:text-sm" href="#"
-            >info@abstract.com</a
-          >
-        </div>
-        <div class="flex text-right">
+        <div class="flex flex-row text-right text-gray md:ml-1 md:mt-52">
           <p
             class="mt-2 text-lg text-white md:text-xs md:font-bold 2xl:mb-16 2xl:mt-4 2xl:font-medium"
           >
