--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
           class="flex flex-col gap-20 md:grid md:grid-cols-2 xl:gap-x-1 2xl:grid 2xl:grid-cols-2"
         >
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-16">
               <img src="./assets/icon-versions.png" alt="" />
             </div>
             <div
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="flex flex-row lg:mt-0 2xl:mt-0">
-            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-account.png" alt="" />
             </div>
             <div
@@ -257,7 +257,7 @@
             </div>
           </div>
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-organizations.png" alt="" />
             </div>
             <div
@@ -287,7 +287,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-billing.png" alt="" />
             </div>
             <div
@@ -316,7 +316,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-authenticate.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-96">
@@ -343,7 +343,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-20 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 xl:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-comment.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black xl:w-[23rem] 2xl:w-96">
@@ -373,7 +373,7 @@
       </section>
     </main>
     <footer
-      class="grid grid-rows-[auto,auto] bg-black-200 px-10 pb-20 md:pl-8 md:pr-3 xl:grid-cols-[auto,auto] 2xl:px-24"
+      class="grid grid-rows-[auto,auto] bg-black-200 px-10 pb-20 md:pl-8 md:pr-3 xl:grid-cols-[auto,auto] xl:px-20 2xl:px-24"
     >
       <div class="mt-6 w-64 md:mt-11 2xl:ml-[20.4rem]">
         <img
