Update footer styles for desktops

--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
                 designs in one place.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -245,7 +245,7 @@
                 details, and password.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -275,7 +275,7 @@
                 people and your work.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -304,7 +304,7 @@
                 Change subscriptions and payment details.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -331,7 +331,7 @@
                 Set up and configure SSO, SCIM, and Just-in-Time provisioning.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -358,7 +358,7 @@
                 Get in touch with a human.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -373,7 +373,7 @@
       </section>
     </main>
     <footer
-      class="grid grid-rows-[auto,auto] bg-black-200 px-10 pb-20 md:pl-8 md:pr-3 xl:px-20 2xl:px-24"
+      class="grid grid-rows-[auto,auto] bg-black-200 px-10 pb-20 text-white md:pl-8 md:pr-3 xl:px-20 xl:pb-14 2xl:px-24"
     >
       <div class="mt-6 w-64 md:mt-11 xl:hidden 2xl:ml-[20.4rem]">
         <img
@@ -384,62 +384,27 @@
         />
       </div>
       <div
-        class="xl:grid-cols-footer font-GT-America text-gray sm:hidden md:grid md:w-[41.6rem] md:grid-cols-4 2xl:grid 2xl:w-[55rem]"
+        class="xl:grid-cols-footer font-GT-America sm:hidden md:grid md:w-[41.6rem] md:grid-cols-4 2xl:grid 2xl:w-[55rem]"
       >
         <div class="mt-11 flex flex-col text-base md:mt-7 xl:mt-11">
-          <p class="text-2xl font-semibold text-white md:text-lg 2xl:text-2xl">
-            Abstract
-          </p>
-          <a class="mt-2 md:mb-1.5 md:mt-1 2xl:mt-4" href="#">Branches</a>
+          <p class="text-2xl font-semibold md:text-lg 2xl:text-2xl">Abstract</p>
+          <a class="mt-2 md:mb-1.5 md:mt-1 xl:mt-4 2xl:mt-4" href="#"
+            >Branches</a
+          >
         </div>
         <div class="mt-11 flex flex-col text-base md:mt-7 xl:mt-11">
-          <p class="text-2xl font-semibold text-white md:text-lg 2xl:text-2xl">
+          <p class="text-2xl font-semibold md:text-lg 2xl:text-2xl">
             Resources
           </p>
-          <a class="mt-2 md:mb-1.5 md:mt-1 2xl:mt-4" href="#">Blog</a>
+          <a class="mt-2 md:mb-1.5 md:mt-1 xl:mt-4 2xl:mt-4" href="#">Blog</a>
           <a class="md:mb-1.5" href="#">Help Center</a>
-          <a class="md:mb-1.5" href="#">Contact Support</a>
           <a class="md:mb-1.5" href="#">Release Notes</a>
           <a class="md:mb-1.5" href="#">Status</a>
         </div>
         <div class="mt-11 flex flex-col md:mt-7 xl:mt-11">
-          <p
-            class="text-[1.51rem] font-semibold text-white md:text-lg 2xl:text-2xl"
-          >
-            Company
-          </p>
+          <p class="text-2xl font-semibold md:text-lg">Community</p>
           <a
-            class="hr-[1.08rem] mt-2 text-base md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
-            href="#"
-            >About Us</a
-          >
-          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
-            >Careers</a
-          >
-          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
-            >Legal</a
-          >
-          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
-            >Privacy</a
-          >
-          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
-            >Terms of Use</a
-          >
-          <div class="md:mr-10">
-            <p
-              class="mt-1 text-lg font-bold text-white lg:text-base 2xl:text-base"
-            >
-              Contact Us
-            </p>
-            <a class="text-base lg:text-base 2xl:text-sm" href="#"
-              >info@abstract.com</a
-            >
-          </div>
-        </div>
-        <div class="mt-11 flex flex-col md:mt-7 xl:mt-11">
-          <p class="text-2xl font-semibold text-white md:text-lg">Social</p>
-          <a
-            class="mt-2 text-base md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
+            class="mt-2 text-base md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base xl:mt-4 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
             >Twitter</a
           >
@@ -453,10 +418,42 @@
             >Dribble</a
           >
         </div>
-        <div class="flex flex-row text-right text-gray md:ml-1 md:mt-52">
-          <img class="hidden md:hidden" src="/src/logo.svg" alt="" />
+        <div class="mt-11 flex flex-col md:mt-7 xl:mt-11">
+          <p class="text-[1.51rem] font-semibold md:text-lg 2xl:text-2xl">
+            Company
+          </p>
+          <a
+            class="mt-2 text-base md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base xl:mt-4 2xl:mt-4 2xl:text-[.97rem]"
+            href="#"
+            >About Us</a
+          >
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
+            >Careers</a
+          >
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
+            >Legal</a
+          >
+          <div class="md:mr-10">
+            <p
+              class="mt-1 text-lg font-bold lg:text-base xl:mt-6 2xl:text-base"
+            >
+              Contact Us
+            </p>
+            <a class="text-base lg:text-base 2xl:text-sm" href="#"
+              >info@abstract.com</a
+            >
+          </div>
+        </div>
+        <div
+          class="flex flex-row text-right md:ml-1 md:mt-52 xl:flex-col xl:text-left"
+        >
+          <img
+            class="hidden md:hidden xl:inline-block xl:size-9"
+            src="/src/logo.svg"
+            alt=""
+          />
           <p
-            class="mt-2 text-lg text-white md:text-xs md:font-bold 2xl:mb-16 2xl:mt-4 2xl:font-medium"
+            class="mt-2 text-lg md:text-xs md:font-bold xl:mt-5 xl:text-base xl:font-medium 2xl:mb-16"
           >
             © Copyright 2022
             <br />
