--- a/public/index.html
+++ b/public/index.html
@@ -120,12 +120,12 @@
           </div>
         </button>
         <button
-          class="hidden items-center justify-center rounded-md border-[1px] border-gray bg-[#161616] text-lg tracking-wide xl:ml-[36rem] xl:mr-4 xl:flex xl:px-4 xl:py-1.5"
+          class="hidden items-center justify-center rounded-md border-[1px] border-gray bg-[#161616] text-lg tracking-wide hover:bg-white hover:text-black xl:ml-[36rem] xl:mr-4 xl:flex xl:px-4 xl:py-1.5"
         >
           Submit a request
         </button>
         <button
-          class="hidden rounded-md bg-blue-200 text-lg xl:flex xl:items-center xl:justify-center xl:px-6 xl:py-1.5"
+          class="hidden rounded-md bg-blue-200 text-lg hover:border-[1px] hover:border-gray hover:bg-black xl:flex xl:items-center xl:justify-center xl:px-6 xl:py-1.5"
         >
           Sign In
         </button>
@@ -215,7 +215,7 @@
                 designs in one place.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 hover:underline lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -245,7 +245,7 @@
                 details, and password.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 hover:underline lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -275,7 +275,7 @@
                 people and your work.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 hover:underline lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -304,7 +304,7 @@
                 Change subscriptions and payment details.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 hover:underline lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -331,7 +331,7 @@
                 Set up and configure SSO, SCIM, and Just-in-Time provisioning.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 hover:underline lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -358,7 +358,7 @@
                 Get in touch with a human.
               </p>
               <div
-                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
+                class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 hover:underline lg:text-xl lg:font-normal xl:text-lg 2xl:text-[1.2rem] 2xl:font-medium"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -384,7 +384,9 @@
           <p class="text-base font-semibold md:text-lg 2xl:text-2xl">
             Abstract
           </p>
-          <a class="mt-2 md:mb-1.5 md:mt-1 xl:mt-4 2xl:mt-4" href="#"
+          <a
+            class="mt-2 hover:text-gray md:mb-1.5 md:mt-1 xl:mt-4 2xl:mt-4"
+            href="#"
             >Branches</a
           >
         </div>
@@ -392,25 +394,35 @@
           <p class="text-2xl font-semibold sm:text-sm md:text-lg 2xl:text-2xl">
             Resources
           </p>
-          <a class="mt-2 md:mb-1.5 md:mt-1 xl:mt-4 2xl:mt-4" href="#">Blog</a>
-          <a class="md:mb-1.5" href="#">Help Center</a>
-          <a class="md:mb-1.5" href="#">Release Notes</a>
-          <a class="md:mb-1.5" href="#">Status</a>
+          <a
+            class="mt-2 hover:text-gray md:mb-1.5 md:mt-1 xl:mt-4 2xl:mt-4"
+            href="#"
+            >Blog</a
+          >
+          <a class="hover:text-gray md:mb-1.5" href="#">Help Center</a>
+          <a class="hover:text-gray md:mb-1.5" href="#">Release Notes</a>
+          <a class="hover:text-gray md:mb-1.5" href="#">Status</a>
         </div>
         <div class="mt-11 flex flex-col text-sm md:mt-10 xl:mt-11">
           <p class="text-2xl font-semibold sm:text-sm md:text-lg">Community</p>
           <a
-            class="mt-2 md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base xl:mt-4 2xl:mt-4 2xl:text-[.97rem]"
+            class="mt-2 hover:text-gray md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base xl:mt-4 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
             >Twitter</a
           >
-          <a class="md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
+          <a
+            class="hover:text-gray md:mb-1.5 lg:text-base 2xl:text-[.97rem]"
+            href="#"
             >LinkedIn</a
           >
-          <a class="md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
+          <a
+            class="hover:text-gray md:mb-1.5 lg:text-base 2xl:text-[.97rem]"
+            href="#"
             >Facebook</a
           >
-          <a class="md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
+          <a
+            class="hover:text-gray md:mb-1.5 lg:text-base 2xl:text-[.97rem]"
+            href="#"
             >Dribble</a
           >
         </div>
@@ -421,21 +433,29 @@
             Company
           </p>
           <a
-            class="mt-2 md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base xl:mt-4 2xl:mt-4 2xl:text-[.97rem]"
+            class="mt-2 hover:text-gray md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base xl:mt-4 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
             >About Us</a
           >
-          <a class="md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
+          <a
+            class="hover:text-gray md:mb-1.5 lg:text-base 2xl:text-[.97rem]"
+            href="#"
             >Careers</a
           >
-          <a class="md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#">Legal</a>
+          <a
+            class="hover:text-gray md:mb-1.5 lg:text-base 2xl:text-[.97rem]"
+            href="#"
+            >Legal</a
+          >
           <div class="text-sm md:mr-10">
             <p
               class="mt-3 text-lg font-bold sm:text-sm lg:text-base xl:mt-6 2xl:text-base"
             >
               Contact Us
             </p>
-            <a class="lg:text-base 2xl:text-sm" href="#">info@abstract.com</a>
+            <a class="hover:text-gray lg:text-base 2xl:text-sm" href="#"
+              >info@abstract.com</a
+            >
           </div>
         </div>
         <div
